# breeze-emu

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md  index.html  search-index.js
.cargo/: config
benches/: dumb.rs
breeze_backend/: enum.BackendAction.html  index.html  sidebar-items.js  trait.AudioSink.html  trait.Renderer.html  type.BackendResult.html
breeze_backend/dummy/: index.html  sidebar-items.js  struct.DummyRenderer.html  struct.DummySink.html
breeze_backend/input/: index.html  sidebar-items.js
breeze_backend/input/joypad/: enum.JoypadButton.html  index.html  sidebar-items.js  struct.JoypadState.html  trait.JoypadImpl.html
breeze_backend/ppu/: constant.SCREEN_HEIGHT.html  constant.SCREEN_WIDTH.html  index.html  sidebar-items.js
breeze_backend/viewport/: index.html  sidebar-items.js  struct.Viewport.html
breeze_core/: Cargo.toml  frontend.rs  index.html  input.rs  lib.rs  log_util.rs  rom.rs  sidebar-items.js  snes.rs
breeze_core/dma/: enum.TransferMode.html  fn.do_dma.html  fn.do_hdma.html  fn.init_hdma.html  index.html  sidebar-items.js  struct.DmaChannel.html
breeze_core/input/: enum.Peripheral.html  index.html  sidebar-items.js  struct.Input.html  struct.Ports.html
breeze_core/input/port/: enum.Peripheral.html
breeze_core/ppu/: bg.rs  constant.SCREEN_HEIGHT.html  constant.SCREEN_WIDTH.html  constant.VRAM_SIZE.html  index.html  mod.rs  rendering.rs  sidebar-items.js  sprites.rs  struct.FrameBuf.html  struct.Ppu.html  struct.Rgb.html  struct.SnesRgb.html  struct.Vram.html
breeze_core/ppu/cgram/: constant.CGRAM_SIZE.html  index.html  sidebar-items.js  struct.Cgram.html
breeze_core/ppu/oam/: constant.OAM_SIZE.html  index.html  sidebar-items.js  struct.Oam.html  struct.OamEntry.html
breeze_core/ppu/rgb/: struct.Rgb.html  struct.SnesRgb.html
breeze_core/record/: enum.RecordingFormat.html  fn.create_recorder.html  fn.create_replayer.html  index.html  sidebar-items.js  trait.Recorder.html  trait.Replayer.html  trait.WriteSeek.html
breeze_core/rom/: index.html  sidebar-items.js  struct.Rom.html  struct.RomHeader.html
breeze_core/save/: enum.SaveStateFormat.html  index.html  sidebar-items.js
breeze_core/snes/: constant.WRAM_SIZE.html  index.html  sidebar-items.js  struct.Emulator.html  struct.Peripherals.html  struct.Snes.html  struct.Wram.html
breeze_frontend_api/: Cargo.toml  input.rs  lib.rs  ppu.rs
breeze_frontend_api/input/: joypad.rs
breeze_frontends/: Cargo.toml  frontend_dummy.rs  frontend_glium.rs  frontend_sdl.rs  lib.rs
byte_array/: Cargo.toml  index.html  lib.rs  macro.byte_array!.html  macro.impl_byte_array!.html  macro.impl_byte_array_extra!.html  sidebar-items.js
implementors/breeze_backend/: trait.Renderer.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js
implementors/core/ops/: trait.Deref.js  trait.DerefMut.js  trait.Index.js  trait.IndexMut.js
implementors/core/str/: trait.FromStr.js
implementors/core/str/pattern/: trait.DoubleEndedSearcher.js
implementors/libsavestate/: trait.SaveState.js  trait.TransmuteByteSafe.js
implementors/wdc65816/: trait.Mem.js
libsavestate/: Cargo.toml  fn.read_exact.html  index.html  lib.rs  macro.impl_save_state!.html  macro.impl_save_state_fns!.html  macro.impl_save_state_for_newtype!.html  sidebar-items.js  trait.SaveState.html  trait.TransmuteByteSafe.html
rendertest/: main.rs
rendertest/tests/dummy/: test.rs
spc700/: Cargo.toml  index.html  lib.rs  sidebar-items.js  struct.Spc700.html
src/: apu.rs  byte_array.rs  cpu.rs  dma.rs  dsp.rs  input.rs  log_util.rs  main.rs  ppu.rs  rom.rs  savestate.rs  snes.rs
src/apu/: addressing.rs  dsp.rs  ipl.rs  mod.rs  statusreg.rs  timer.rs
src/breeze/: input.rs  main.rs
src/breeze_backend/: Cargo.toml  dummy.rs  dummy.rs.html  lib.rs  lib.rs.html  ppu.rs.html  viewport.rs  viewport.rs.html
src/breeze_backend/input/: joypad.rs  joypad.rs.html  mod.rs  mod.rs.html
src/breeze_backends/: Cargo.toml  lib.rs
src/breeze_backends/backend/: cpal.rs  mod.rs
src/breeze_core/: Cargo.toml  array_util.rs  dma.rs  dma.rs.html  flexvec.rs  flexvec.rs.html  input.rs  lib.rs  lib.rs.html  log_util.rs.html  rom.rs  rom.rs.html  save.rs  save.rs.html  snes.rs  snes.rs.html
src/breeze_core/input/: mod.rs  mod.rs.html  port.rs  port.rs.html
src/breeze_core/ppu/: bg.rs  bg.rs.html  cgram.rs  cgram.rs.html  mod.rs  mod.rs.html  oam.rs  oam.rs.html  regs.rs  regs.rs.html  rendering.rs  rendering.rs.html  rgb.rs  rgb.rs.html  sprites.rs  sprites.rs.html
src/breeze_core/record/: custom.rs  custom.rs.html  mod.rs  mod.rs.html  smv.rs  smv.rs.html
src/breeze_cpal/: Cargo.toml  lib.rs
src/breeze_frontend_api/: Cargo.toml  lib.rs  ppu.rs
src/breeze_frontend_api/input/: bitstream.rs  joypad.rs  mod.rs
src/breeze_frontends/: Cargo.toml  frontend_glium.rs  frontend_sdl.rs  frontend_test.rs  lib.rs  viewport.rs
src/breeze_frontends/frontend/: cpal.rs  dummy.rs  glium.rs  mod.rs  sdl.rs  test.rs
src/breeze_glium/: Cargo.toml  lib.rs
src/breeze_sdl/: Cargo.toml  lib.rs
src/byte_array/: Cargo.toml  lib.rs  lib.rs.html
src/cpu/: addressing.rs  dma.rs  mod.rs  statusreg.rs
src/frontend/: dummy.rs  glium.rs  mod.rs  sdl.rs
src/libsavestate/: Cargo.toml  lib.rs  lib.rs.html
src/ppu/: bg.rs  mod.rs  rendering.rs  sprites.rs
src/spc700/: Cargo.toml  addressing.rs  addressing.rs.html  dsp.rs  dsp.rs.html  ipl.rs.html  lib.rs  lib.rs.html  once.rs  once.rs.html  statusreg.rs  statusreg.rs.html  timer.rs  timer.rs.html
src/wdc65816/: Cargo.toml  addressing.rs  addressing.rs.html  lib.rs  lib.rs.html  statusreg.rs  statusreg.rs.html
src/wdc65816/benches/: cpu.rs
wdc65816/: Cargo.toml  addressing.rs  index.html  lib.rs  sidebar-items.js  struct.Cpu.html  trait.Mem.html
