[package]
name = "spc700"
description = "An (incomplete) emulator for the Super Nintendo's APU"
version = "0.1.0"
authors = ["Jonas Schievink <jonas@schievink.net>"]
license = "Apache-2.0/MIT"

[lib]
path = "lib.rs"

[dependencies]
byte_array = { path = "../byte_array" }
libsavestate = { path = "../libsavestate" }
log = "0.3"
