[package]
name = "breeze_backend"
version = "0.1.0"
authors = ["Jonas Schievink <jonas@schievink.net>"]
license = "Apache-2.0/MIT"
documentation = "http://jonas-schievink.github.io/breeze-emu/breeze_backend/"
repository = "https://github.com/jonas-schievink/breeze-emu"
description = """
Provides an API to be implemented by Breeze backends.
"""

[lib]
path = "lib.rs"
