[package]
name = "breeze_backends"
version = "0.1.0"
authors = ["Jonas Schievink <jonas@schievink.net>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/jonas-schievink/breeze-emu"
description = """
Bundles "official" Breeze backends for easier use
"""

[lib]
path = "lib.rs"

[dependencies]
breeze_backend = { version = "0.1", path = "../breeze_backend" }
log = "0.3"
lazy_static = "0.1"

[dependencies.breeze_glium]
path = "../breeze_glium"
optional = true

[dependencies.breeze_sdl]
path = "../breeze_sdl"
optional = true

[dependencies.breeze_cpal]
path = "../breeze_cpal"
optional = true

[features]
glium = ["breeze_glium"]
sdl = ["breeze_sdl"]
cpal = ["breeze_cpal"]
