[package]
name = "breeze_frontend_api"
description = "Breeze Emulator Frontend API"
version = "0.1.0"
authors = ["Jonas Schievink <jonas@schievink.net>"]
license = "Apache-2.0/MIT"
documentation = "http://jonas-schievink.github.io/breeze-emu/breeze_frontend_api/"
repository = "https://github.com/jonas-schievink/breeze-emu"

[lib]
path = "lib.rs"

[dependencies]
libsavestate = { version = "0.1", path = "../libsavestate" }
