[package]
name = "byte_array"
description = "Utility macro for creating convenient fixed-size `u8` arrays."
version = "0.1.0"
authors = ["Jonas Schievink <jonas@schievink.net>"]
license = "Apache-2.0/MIT"
documentation = "https://jonas-schievink.github.io/breeze-emu/byte_array/"
repository = "https://github.com/jonas-schievink/breeze-emu"

[lib]
path = "lib.rs"
