[package]
name = "wdc65816"
description = "A WDC65816 emulator - The CPU used in the Super Nintendo (SNES)"
version = "0.1.0"
authors = ["Jonas Schievink <jonas@schievink.net>"]
license = "Apache-2.0/MIT"
documentation = "https://jonas-schievink.github.io/breeze-emu/wdc65816/"
repository = "https://github.com/jonas-schievink/breeze-emu"

[lib]
path = "lib.rs"

[dependencies]
libsavestate = { version = "0.1", path = "../libsavestate" }
# The benchmark was improved by 50% when the log level was limited to "debug"
log = { version = "0.3", features = ["release_max_level_debug"] }
